# habit-tasks-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 34a80803743b_add_role_enum_to_user.py  72b4b1ea4fca_.py  7f39261c7034_change_created_at_to_timestamptz.py  9cdcca6f6172_initial.py  c1589e9eb76e_initial.py  e340a4b2d7ed_delete_frequence.py
src/: __init__.py  config.py  main.py
src/alembic/versions/: 2025_06_14_2203-9c544d2d99ab_create_users_table.py  2025_06_16_2120-15b9ec40f963_create_users_table.py  2025_06_16_2234-7dd51a1c7885_create_events_table.py  2025_09_03_1946-b4c568566a96_added_password_column_for_user_model.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth.py  users.py
src/api/v1/auth/: dependencies.py  exceptions.py  router.py  utils.py
src/api/v1/users/: dependencies.py  router.py
src/crud/: __init__.py  users.py
src/database/: __init__.py  database_helper.py  db_helper.py
src/database/models/: __init__.py  base.py  event.py  friend.py  user.py
src/database/models/mixins/: __init__.py
src/habit_tasks/: __init__.py  config.py  main.py
src/habit_tasks/alembic/: env.py
src/habit_tasks/database/: database_helper.py
src/habit_tasks/schemas/: sync.py  task.py  token.py  user.py
src/habit_tasks/utils/: change_case.py
src/routers/: auth.py  users.py
src/schemas/: jwt.py  user.py
src/utils/: __init__.py  auth.py  change_case.py
tests/: conftest.py
tests/integration/: test_users.py
tests/unit/: test_change_case.py
(+19 files in other folders)
