[project]
name = "backend"
version = "0.1.0"
description = "Backend for some project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pyjwt[crypto]>=2.10.1",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["FAST001", "FAST002", "FAST003"]
